add Makefile and /healthcheck
