# docs/swagger.json
@@ -13,6 +13,35 @@
     "host": "localhost:8082",
     "basePath": "/",
     "paths": {
+        "/healthcheck": {
+            "get": {
+                "description": "Check if the server is running and MongoDB connection is established",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Check server health status",
+                "responses": {
+                    "200": {
+                        "description": "Everything is fine!",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "MongoDB connection failed!",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/posts": {
             "get": {
                 "description": "Get all posts",
